# tavily-cli

./: .gitignore  CHANGELOG.md  README.md  keys.json.sample  pyproject.toml
docs/superpowers/specs/: 2026-04-08-tavily-usage-sync-design.md
skills/tavily/: SKILL.md
src/local_tavily/: __init__.py  __main__.py  cli.py  crawl.py  extract.py  formatters.py  key_manager.py  map.py  research.py  search.py  usage.py  utils.py
tests/: __init__.py  conftest.py  test_cli_extract.py  test_cli_search.py  test_e2e.py  test_extract_module.py  test_integration.py  test_key_manager.py  test_output_formats.py  test_search_module.py  test_usage_module.py  test_utils.py
